--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
             padding: 20px;
         }
     </style>
+    <!-- other head elements -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
