--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             margin-bottom: 15px;
         }
     </style>
+     <!-- other head elements -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
