--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
     </style>
      <!-- other head elements -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="web.css">
 </head>
 
 <body>
