--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
 
 <head>
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-PG98WLVP');</script>
+<!-- End Google Tag Manager -->
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Technical Challenge</title>
@@ -25,7 +33,11 @@
 </head>
 
 <body>
-
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PG98WLVP"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+    
     <header>
         <h1>Technical Challenge Overview</h1>
         <p>The technical challenge comes in two parts - hands-on exercise(s) which you will complete within 48 hours of receiving this test, then an in-person session to walk through your submission. The purpose of this technical challenge is to assess your level of technical ability, approach to problem solving and troubleshooting, and your ability to describe your solution to an audience. While you may reference external sources as needed (don’t forget to quote), submission of this work should reflect your own best independent effort. Good luck!</p>
