--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </style>
      <!-- other head elements -->
     <link rel="stylesheet" href="web.css">
+    <script src="java.js"></script>
 </head>
 
 <body>
