--- a/index.html
+++ b/index.html
@@ -21,7 +21,27 @@
 </head>
 
 <body>
-  Hello world
+  <header>
+        <h1>Technical Challenge Overview</h1>
+        <p>The technical challenge comes in two parts - hands-on exercise(s) which you will complete within 48 hours of receiving this test, then an in-person session to walk through your submission. The purpose of this technical challenge is to assess your level of technical ability, approach to problem solving and troubleshooting, and your ability to describe your solution to an audience. While you may reference external sources as needed (don’t forget to quote), submission of this work should reflect your own best independent effort. Good luck!</p>
+  </header>
+  
+  <section>
+        <h2>1. Google Tag Manager</h2>
+        <p>Implement Google Tag Manager on your website site. If you do not have a website, create a test page/website using any hosting option you prefer - free sites can be created using <a href="https://pages.github.com/" target="_blank">https://pages.github.com/</a> with a free Github account, or sites such as Zeit or Surge. Load your website with the following query string parameter: <code>?key=hello&value=world</code></p>
+        <p>e.g. <code>https://mysite.com?key=hello&value=world</code></p>
+        <p>Add functionality to push the key value pair to the GTM data layer. Also, ensure that these values are not hardcoded, allowing testing of other key value pairs.</p>
+        <a href="https://keebleinc.github.io/impact-assessment/?key=hello&value=world">Click Here To Test The Google Tag</a>
+
+    </section>
+
+    <section>
+        <h2>2. API Implementation</h2>
+        <p>Add a button to your page that sends a GET API request using <a href="http://httpbin.org/" target="_blank">http://httpbin.org/</a>. The API call should use the query string parameters stored in the GTM data layer (from task 1) as key-value pairs sent to the GET request.</p>
+        <p>e.g. <code>https://httpbin.org/get?key=hello&value=world</code></p>
+        <p>Log the response in the console.</p>
+    </section>
+  
   <button onclick="sendGetRequest()">Send API Request</button>
   <script src="script.js"></script>
   <script src="https://www.googletagmanager.com/gtag/js?id=GTM-PG98WLVP" async></script>
@@ -35,11 +55,5 @@
     }
   </script>
 
-  <!--
-  This script places a badge on your repl's full-browser view back to your repl's cover
-  page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
-  teal, blue, blurple, magenta, pink!
-  -->
-  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
 </body>
 
