--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Take Home Test from Impact</title>
   <link href="styles.css" rel="stylesheet" type="text/css" />
   <script>
     window.dataLayer = window.dataLayer || [];
