--- a/index.html
+++ b/index.html
@@ -6,21 +6,37 @@
   <meta name="viewport" content="width=device-width">
   <title>Take Home Test from Impact</title>
   <link href="styles.css" rel="stylesheet" type="text/css" />
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'GTM-PG98WLVP');
-    window.onload = function() {
-      const urlParams = new URLSearchParams(window.location.search);
-      for (const [key, value] of urlParams.entries()) {
-        window.dataLayer.push({'key': key, 'value': value});
-      }
-    }
-  </script>
+  
+  <!-- Google Tag Manager -->
+              <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+              new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+              j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+              'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+              })(window,document,'script','dataLayer','GTM-PG98WLVP');
+              </script>
+   <!-- End Google Tag Manager -->
+          <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'GTM-PG98WLVP');
+            window.onload = function() {
+              const urlParams = new URLSearchParams(window.location.search);
+              for (const [key, value] of urlParams.entries()) {
+                window.dataLayer.push({'key': key, 'value': value});
+              }
+            }
+          </script>
+          
 </head>
 
 <body>
+ 
+  <!-- Google Tag Manager (noscript) -->
+      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PG98WLVP"
+      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  
   <div class="container">
     <header>
       <h1>Technical Challenge Overview</h1>
