--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       <p>e.g. <code>https://mysite.com?key=hello&value=world</code></p>
       <p>Add functionality to push the key value pair to the GTM data layer. Also, ensure that these values are not hardcoded, allowing testing of other key value pairs.</p>
       <a class="myButton" href="https://keebleinc.github.io/impact-assessment/?key=hello&value=world">Click Me To Test The GTM</a>
+      <a class="myButton" href="https://keebleinc.github.io/impact-assessment/?key=impact&value=assessment">Click Me To Test Another Key Value Pair</a>
     </section>
 
     <section>
