--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <p>Log the response in the console.</p>
     </section>
 
-    <a class="apiButton" onclick="sendGetRequest()">Send API Request</a>
+    <a class="apiButton" <button>onclick="sendGetRequest()">Send API Request</button></a>
     <script src="script.js"></script>
     <script src="https://www.googletagmanager.com/gtag/js?id=GTM-PG98WLVP" async></script>
     <script>
