--- a/index.html
+++ b/index.html
@@ -42,19 +42,7 @@
               }
                   </style>
                   <style>
-              .apiButton {
-                border: 5px solid #20750D;
-                border-radius: 12px;
-                background: #21BC27;
-                color: #CDFFCA;
-                display:inline-block;
-                padding:20px;
-                opacity:1;
-              }
-              .myButton:hover {
-                opacity:0.5;
-              }
-                  </style>
+            
                 
 </head>
 
@@ -87,7 +75,7 @@
       <p>Log the response in the console.</p>
     </section>
 
-    <a class="apiButton" <button>onclick="sendGetRequest()">Send API Request</button></a>
+    <button>onclick="sendGetRequest()">Send API Request</button>
     <script src="script.js"></script>
     <script src="https://www.googletagmanager.com/gtag/js?id=GTM-PG98WLVP" async></script>
     <script>
