--- a/index.html
+++ b/index.html
@@ -61,17 +61,16 @@
 
     <section>
       <h2>1. Google Tag Manager</h2>
-      <p>Implement Google Tag Manager on your website site. If you do not have a website, create a test page/website using any hosting option you prefer - free sites can be created using <a href="https://pages.github.com/" target="_blank">https://pages.github.com/</a> with a free Github account, or sites such as Zeit or Surge. Load your website with the following query string parameter: <code>?key=hello&value=world</code></p>
-      <p>e.g. <code>https://mysite.com?key=hello&value=world</code></p>
-      <p>Add functionality to push the key value pair to the GTM data layer. Also, ensure that these values are not hardcoded, allowing testing of other key value pairs.</p>
+      <h3>Objective</h3>
+      <p>Implement a GTM on your website site. Add functionality to push the key value pair to the GTM data layer and also ensure that these values are not hardcoded, allowing testing of other key value pairs.</p>
       <a class="myButton" href="https://keebleinc.github.io/impact-assessment/?key=hello&value=world">Click Me To Test The GTM</a>
       <a class="myButton" href="https://keebleinc.github.io/impact-assessment/?key=impact&value=assessment">Click Me To Test Another Key Value Pair</a>
     </section>
 
     <section>
       <h2>2. API Implementation</h2>
+      <h3>Objective</h3>
       <p>Add a button to your page that sends a GET API request using <a href="http://httpbin.org/" target="_blank">http://httpbin.org/</a>. The API call should use the query string parameters stored in the GTM data layer (from task 1) as key-value pairs sent to the GET request.</p>
-      <p>e.g. <code>https://httpbin.org/get?key=hello&value=world</code></p>
       <p>Log the response in the console.</p>
     </section>
 
