--- a/index.html
+++ b/index.html
@@ -52,12 +52,10 @@
   <div class="container">
     <header>
       <h1>Technical Challenge Overview</h1>
-      <p>The technical challenge comes in two parts - hands-on exercise(s) which you will complete within 48 hours of receiving this test, then an in-person session to walk through your submission. The purpose of this technical challenge is to assess your level of technical ability, approach to problem solving and troubleshooting, and your ability to describe your solution to an audience. While you may reference external sources as needed (don’t forget to quote), submission of this work should reflect your own best independent effort. Good luck!</p>
     </header>
     <section>
       <h2>1. Google Tag Manager</h2>
-      <p>Implement Google Tag Manager on your website site. If you do not have a website, create a test page/website using any hosting option you prefer - free sites can be created using <a href="https://pages.github.com/" target="_blank">https://pages.github.com/</a> with a free Github account, or sites such as Zeit or Surge. Load your website with the following query string parameter: <code>?key=hello&value=world</code></p>
-      <p>e.g. <code>https://mysite.com?key=hello&value=world</code></p>
+      <p>Implement a GTM on your website site and load your website with the following query string parameter: <code>?key=hello&value=world</code></p>
       <p>Add functionality to push the key value pair to the GTM data layer. Also, ensure that these values are not hardcoded, allowing testing of other key value pairs.</p>
       <a class="myButton" href="https://keebleinc.github.io/impact-assessment/?key=hello&value=world">Click Me To Test The GTM</a>
       <a class="myButton" href="https://keebleinc.github.io/impact-assessment/?key=impact&value=assessment">Click Me To Test Another Key Value Pair</a>
