--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   
   <div class="container">
     <header>
-      <h1>Technical Challenge Overview</h1>
+      <h1>Technical Assessment Overview</h1>
     </header>
     <section>
       <h2>1. Google Tag Manager</h2>
@@ -64,7 +64,6 @@
     <section>
       <h2>2. API Implementation</h2>
       <p>Add a button to your page that sends a GET API request using <a href="http://httpbin.org/" target="_blank">http://httpbin.org/</a>. The API call should use the query string parameters stored in the GTM data layer (from task 1) as key-value pairs sent to the GET request.</p>
-      <p>e.g. <code>https://httpbin.org/get?key=hello&value=world</code></p>
       <p>Log the response in the console.</p>
     </section>
     <button onclick="sendGetRequest()">Send API Request</button>
