--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
           </script>
                   <style>
               .myButton {
-                border: 5px solid #20750D;
+                border: 5px solid #000000;
                 border-radius: 12px;
-                background: #21BC27;
-                color: #CDFFCA;
+                background: #FF0000;
+                color: #FFFFFF;
                 display:inline-block;
                 padding:20px;
                 opacity:1;
@@ -78,6 +78,7 @@
         .then(data => console.log(data));
       }
     </script>
+    
   </div>
 </body>
 </html>
