--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
         .then(data => console.log(data));
       }
     </script>
+
+   <section>
+      <h2>3. User Flow Diagram</h2>
+      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FcTh4as0VVLGZ9r6JcE2HbG%2FUser-Flow-Diagram-Template-for-FigJam-(Community)%3Ftype%3Dwhiteboard%26node-id%3D0%253A1%26t%3D2gGjdMtl8Eh3Chs5-1" allowfullscreen></iframe>
+    </section>
     
   </div>
 </body>
