--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
   <meta name="viewport" content="width=device-width">
   <title>Take Home Test from Impact</title>
   <link href="styles.css" rel="stylesheet" type="text/css" />
-  
+  <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-PG98WLVP');</script>
+  <!-- End Google Tag Manager -->
+
                   <style>
               .myButton {
                 border: 5px solid #000000;
@@ -23,7 +30,10 @@
                 
 </head>
 <body>
- 
+  <!-- Google Tag Manager (noscript) -->
+      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PG98WLVP"
+      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <script>
     // Function to get query string parameters
     function getParameterByName(name, url) {
@@ -47,14 +57,6 @@
       });
     }
   </script>
-  
-  <!-- Google Tag Manager (GTM) -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-PG98WLVP');</script>
-  <!-- End Google Tag Manager -->
   
   <div class="container">
     <header>
