--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     })(window,document,'script','dataLayer','GTM-PG98WLVP');</script>
   <!-- End Google Tag Manager -->
 
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-C3Q5KGXZGT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-C3Q5KGXZGT');
+</script>
+
                   <style>
               .myButton {
                 border: 5px solid #000000;
